# ruget

./: .eslintrc.js  .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs
crates/analysis/src/nuget/: __nuget.rs  mod.rs  nuspec.rs
src/: main.ts
src/components/: App.tsx
src/components/home/: HomePage.tsx
src/components/home/header/: SearchInput.tsx
src/components/home/results/: ResultItem.tsx  ResultItemInfo.tsx
src/hooks/common/: useMapQueryData.ts
src/utils/mime/: getLanguage.ts  isImageType.ts  isTextType.ts
src/utils/nuget/: findNugetPackages.ts  getNugetApiIndex.ts  getNugetNupkg.ts
src/utils/nupkg/: isNuPkgDir.ts  isNuPkgEntry.ts
src/utils/workers/: proto.ts
src/utils/workers/analysis/: index.ts  proto.ts  worker.ts
