[package]
name = "analysis"
version = "0.1.0"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
roxmltree = "0.18.0"
serde = { version = "1.0.154", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
recil = { git = "https://github.com/mcountryman/recil.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
